@@ -36,7 +36,6 @@ xmlenc.version=0.52
 jersey.version=1.8
 checkstyle.version=4.2
 ivy.version=2.2.0
-jasper.version=6.1.14
 groovy.version=2.4.5
 guava.version=11.0
 hadoop-common.version=2.7.3
@@ -55,7 +54,6 @@ jaxb-impl.version=2.2.3-1
 jdeb.version=0.8
 jdiff.version=1.0.9
 jettison.version=1.3.4
-jetty.version=6.1.26
 jline.version=2.11
 joda-time.version=2.9.9
 jopt.version=4.1
@@ -99,3 +97,4 @@ curator.version=2.6.0
 htrace.version=3.1.0-incubating
 commons-lang3.version=3.1
 scala-xml.version=1.0.5
+glassfish.el.version=3.0.1-b08
